[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dependencies]
actix-web = "4"
cargo-expand = "1.0.51"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"]}
